add corrections until interpretation translation 1857

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -21,11 +21,11 @@
 \newacronym{ac:EHSM}{EHSM}{Eidgenössischen Hochschule für Sport Magglingen}
 \newacronym{ac:daq}{DAQ}{Data Acquisition}
 \newacronym{ac:ap}{AP}{Arbeitspakete}
-\newacronym{ac:icp}{ICP}{integrated circuit piezoelectric}
+\newacronym{ac:icp}{ICP}{Integrated Circuit Piezoelectric}
 \newacronym{ac:ni}{NI}{National Instruments}
-\newacronym{ac:vi}{VI}{virtuelles Instrument}
-\newacronym{ac:fir}{FIR}{finite impulse response}
-\newacronym{ac:lti}{LTI}{linear time invariant}
+\newacronym{ac:vi}{VI}{Virtuelles Instrument}
+\newacronym{ac:fir}{FIR}{Finite Impulse Response}
+\newacronym{ac:lti}{LTI}{Linear Time Invariant}
 \newacronym{ac:tp}{TP}{Tiefpass}
 \newacronym{ac:cnc}{CNC}{Computerized Numerical Control}
 \newacronym{ac:lms}{LMS}{Least Mean Square}
