--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -106,7 +106,7 @@ scp admin@172.22.11.2:/Pfad/zur/Datei /Pfad/zur/Zieldatei
 %
 %
 %Rotationsmatrix
-\section{Rotationsmatrix}\label{sub:rot}
+\section{Rotationsmatrix}\label{sub:rotmat}
 In der Linearen Algebra bietet die Rotationsmatrix die Möglichkeit, einen Punkt im Raum um einen bestimmten Winkel $\phi$ zu drehen. Im vorliegenden Fall ist die Rotation eines Punktes um eine Gerade im Raum gewünscht. Dies wurde in der Linearen Algebra und Geometrie 2 (BZG1104 LINAL2) im zweiten Semester behandelt \cite{lit:linalg2}.\par
 %
 Ziel ist, den Punkt $P$ mit den Koordinaten $\left(x\mid y\mid z\right)$ um den Winkel $\phi$ im Gegenuhrzeigersinn um die Gerade $g$ in den Punkt $P'$ mit Koordinaten $\left(x'\mid y'\mid z'\right)$ zu drehen. Die Gerade $g$ hat dabei die Richtung $\overrightarrow{n}=\left(a\;b\;c\right)^{T}$ und verläuft durch den Ursprung. Ihre Parameterdarstellung ist somit: $\overrightarrow{r}= \lambda*\overrightarrow{n}$ mit $\lambda\;\epsilon\;\mathbb{R}$.\par
