--- a/content/3_konzept/table/auswertung_rot.tex
+++ b/content/3_konzept/table/auswertung_rot.tex
@@ -15,7 +15,7 @@
 		\hline
 		Rotation \unit[105]{°} & \unit[-0.22]{°} & \unit[-0.002]{\%} & \unit[104.78]{°} & \unit[0.003]{°} \\
 		\hline
-		Rotation \unit[118]{°} & \unit[0.74]{°} & \unit[0.006]{\%} & \unit[118.74]{°} & \unit[0.152]{°} \\
+		Rotation \unit[118]{°} & \unit[+0.74]{°} & \unit[+0.006]{\%} & \unit[118.74]{°} & \unit[0.152]{°} \\
 		\hline
      \end{tabularx}  
 \end{table}
