--- a/appendix/versionierung/versionierung.tex
+++ b/appendix/versionierung/versionierung.tex
@@ -23,7 +23,11 @@
             \rowcolor{bfhblue}
             \textcolor{white}{Version} & \textcolor{white}{Änderung} & \textcolor{white}{Autor}\\
             \hline
-            1.0.0 & Erste Version für GitHub & gross10 \\
+            1.0.0 & Abgabe der Dokumentation & gross10, zursr1\\
+            \hline
+            0.2.0 & Abschliessende Korrekturen mit Experten& gross10, zursr1\\
+            \hline
+            0.1.0 & Korrekturen von den Autoren & gross10, zursr1\\
             \hline
             0.0.1 & Erstellung des Dokuments & gross10 \\
             \hline
