--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -119,7 +119,7 @@ Die Rotationsmatrix ist, wie schon erwähnt, definiert durch den Drehwinkel $\phi
 \formula{
             \left(\begin{array}{c}x'\\ y'\\z'\end{array}\right)=R_{g;O;\overrightarrow{n};\phi}*\left(\begin{array}{c}x\\ y\\z\end{array}\right)
         }{
-            R_{g;O;\overrightarrow{n};\phi} & Rotationsmatrix mit Winkel $\phi$ um die Gerade g}[eq:rot]\par
+            R_{g;O;\overrightarrow{n};\phi} & Rotationsmatrix mit Winkel $\phi$ um die Gerade $g$}[eq:rot]\par
 %
 Auf die Zusammensetzung der Rotationsmatrix soll nicht weiter eingegangen werden. Sie beinhaltet die oben genannten Rechnungsschritte. Zur Anwendung genügt es, den Aufbau der Matrix zu kennen, welcher in Gleichung \vref{eq:rotmax} ersichtlich ist:\par  
 %
@@ -145,9 +145,9 @@ Das Integral setzt sich anschliessend als Summe aller dieser berechneten Flächen
 \formula{
 y(n) = y(n-1) + T_a * x(n-1)            
 }{ 
-y(n) & Integral von Beginn bis zur Stelle n\\
+y(n) & Integral von Beginn bis zur Stelle $n$\\
 T_a & Abtastrate\\
-x(n-1) & Abgetasteter Wert an Stelle n -1 
+x(n-1) & Abgetasteter Wert an Stelle $n-1$ 
            }[eq:rechteck]
 %
 % Trapeszmethode
@@ -162,9 +162,9 @@ Auch hier kann das Integral auf relativ einfache Weise rekursiv berechnet werden
 \formula{
 y(n) = y(n-1) + \frac{T_a}{2}  (x(n)+x(n-1))            
 }{ 
-y(n) & Integral von Beginn bis zur Stelle n\\
+y(n) & Integral von Beginn bis zur Stelle $n$\\
 T_a & Abtastrate\\
-x(n) & Abgetasteter Wert an Stelle n 
+x(n) & Abgetasteter Wert an Stelle $n$
            }[eq:trapez]
 %           
 %%
